force-app/main/default/objects/GrantsSetAsideCategory__c/GrantsSetAsideCategory__c.object-meta.xml
<CustomObject>
    <label>Grants Set Aside Category</label>
    <nameField>
        <label>Grants Set Aside Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grants Set Aside Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>