force-app/main/default/objects/GrantsSetAsideCategory__c/fields/Funding_Program__c.field-meta.xml
<CustomField>
    <fullName>Funding_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Program</label>
    <referenceTo>outfunds__Funding_Program__c</referenceTo>
    <relationshipLabel>Grants Set Aside Categories</relationshipLabel>
    <relationshipName>Grants_Set_Aside_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>