force-app/main/default/objects/GrantsSetAsideCategory__c/fields/Remaining_to_Target__c.field-meta.xml
<CustomField>
    <fullName>Remaining_to_Target__c</fullName>
    <formula>Target_Total__c - Total_Contributions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining to Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>