force-app/main/default/objects/GrantsSetAsideCategory__c/fields/Set_Aside_Category__c.field-meta.xml
<CustomField>
    <fullName>Set_Aside_Category__c</fullName>
    <label>Set Aside Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>