force-app/main/default/objects/GrantsSetAsideCategory__c/fields/Target_Total__c.field-meta.xml
<CustomField>
    <fullName>Target_Total__c</fullName>
    <formula>IF(TEXT( Unit_of_Measure__c ) == &quot;Percentage&quot;, (Value__c /100) * Funding_Program__r.outfunds__Total_Program_Amount__c , Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>