force-app/main/default/objects/GrantsSetAsideCategory__c/fields/Total_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Total_Contributions__c</fullName>
    <label>Total Contributions</label>
    <summarizedField>Set_Aside_Contribution__c.Contribution__c</summarizedField>
    <summaryForeignKey>Set_Aside_Contribution__c.Set_Aside_Category__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>